# hidlink-bluetooth

./: .gitignore  CMakeLists.txt  Doxyfile  sdkconfig.defaults
main/: CMakeLists.txt  ble_cdtp.c  ble_gap.c  ble_gatts.c  bt_gap.c  bt_gap.h  bt_hid_host.c  hardware.h  hidlink.c  hidlink.h  main.c  main.h
main/bt_classic/: bt_classic.c  bt_classic.h  bt_classic_private.h  bt_gap.c  bt_gap.h  bt_hid_host.c  bt_hid_host.h
main/bt_low_energy/: ble_cdtp.c  ble_cdtp.h  ble_gap.c  ble_gap.h  ble_gatts.c  ble_gatts.h  bt_low_energy.c  bt_low_energy.h  bt_low_energy_private.h
main/hidlink/: hidlink.c  hidlink.h  hidlink_ble_protocol.c  hidlink_ble_protocol.h  hidlink_private.c  hidlink_private.h
main/led/: led.c  led.h
main/serial/: serial.c  serial.h  serial_private.h
