idf_component_register(
    SRCS 
        "main.c"
        "hidlink/hidlink.c"
        "hidlink/hidlink_private.c"
        "hidlink/hidlink_ble_protocol.c"
        "bt_classic/bt_classic.c"
        "bt_classic/bt_gap.c"
        "bt_classic/bt_hid_host.c"
        "bt_low_energy/bt_low_energy.c"
        "bt_low_energy/ble_cdtp.c"
        "bt_low_energy/ble_gap.c"
        "bt_low_energy/ble_gatts.c"
        "led/led.c"
        "serial/serial.c"
    INCLUDE_DIRS 
        "."
)
